# gameroy

./: .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  gameroy.toml  index.html  opcodes.txt  opcodes_cr.txt  package.bat  package.sh
.cargo/: config.toml
.github/workflows/: rust.yml
android/: .gitignore  Cargo.toml  build.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/io/github/rodrigodd/gameroy/: MainActivity.java
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/layout/: webview.xml
android/app/src/main/res/values/: ic_launcher_background.xml
android/src/: lib.rs
assets/: .gitignore  resources.rc  style.ron
core/: Cargo.toml
core/after_boot/: memory.sav  ppu.sav  sound.sav
core/benches/: bench_emulator.rs
core/src/: cartridge.rs  consts.rs  cpu.rs  debugger.rs  diff_stack.rs  disassembler.rs  dissasembler.rs  gameboy.rs  interpreter.rs  lib.rs  ppu.rs  save_state.rs  sound_controller.rs  vcd_writer.rs  wave_trace.rs
core/src/gameboy/: cartridge.rs  cpu.rs  ppu.rs  serial_transfer.rs  sound_controller.rs  timer.rs
core/src/parser/: mod.rs  size.rs
core/tests/: README.md  check_boot_state.rs  check_interrupt_prediction.rs  test_rom.rs
docs/: lazy_update.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_cartridge.rs  fuzz_interpreter.rs  fuzz_jit.rs
jit/: Cargo.toml  build-reference.sh  reference.rs
jit/src/: lib.rs  linux.rs  windows.rs  x64.rs
jit/tests/: check_jit_compilation.rs
libretro/: Cargo.toml  gameroy_libretro.info
libretro/src/: lib.rs
license/: README.md  about-android.toml  about-linux.toml  about-windows.toml  about.hbs  about.toml  license.html
native/: Cargo.toml  build.rs  gameroy.toml
native/src/: bench.rs  main.rs
src/: android.rs  bench.rs  config.rs  cpu.rs  disassembler_viewer.rs  dissasembler.rs  dissasembler_viewer.rs  emulator.rs  event_table.rs  event_table.rz~  executor.rs  fold_view.rs  gameboy.rs  interpreter.rs  layout.rs  lib.rs  main.rs  memory.rs  opcode.rs  rom_loading.rs  split_view.rs  style.rs  ui.rs  waker_fn.rs  wasm.rs
src/rom_loading/: android.rs  native.rs  wasm.rs
src/ui/: disassembler_viewer.rs  emulator_ui.rs  ppu_viewer.rs  rom_loading_ui.rs
src/ui/emulator_ui/: disassembler_viewer.rs  game_pad.rs  ppu_viewer.rs
src/widget/: fold_view.rs  menu.rs  pixel_perfect_layout.rs  split_view.rs  table_item.rs
test_rom/: hardware.inc  makefile  test.asm  test.gb
tools/: plot.py
wasm/: Cargo.toml  index.html  wasm-build.sh
wasm/src/: lib.rs
