[workspace]
members = ["core"]

[package]
name = "gameroy"
version = "0.1.1"
authors = ["Rodrigo Batista de Moraes <rodrigobatsmoraes@hotmail.com>"]
edition = "2018"
build = "build.rs"
license = "MIT OR Apache-2.0"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "gameroy"
path = "src/main.rs"

[lib]
name = "gameroy_lib"
crate_type = ["cdylib", "rlib"]
path = "src/lib.rs"


[build-dependencies]
embed-resource = "1.7.1"

[features]

# Enables console output.
# On windows, a application with console subsystem opens a terminal at startup, wich is undesirable
console = []

# Staticly include files in the binary
static = []

default = ["console", "rfd", "audio-engine"]

[dependencies]

gameroy-core = { path = "core" }
# giui = { path = "../giui" }
giui = { git = "https://github.com/Rodrigodd/giui" }
# sprite-render = { path = "../sprite-render-rs", features=["opengl", "webgl"] }
sprite-render = { features=["opengl", "webgl"], git = "https://github.com/Rodrigodd/sprite-render-rs" }
# audio-engine = { path = "../audio-engine"}
audio-engine = { version = "0.2.1", optional = true }
winit = { version = "0.26.1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
ron = "0.6"
image = { version = "0.24.1", default-features = false, features=["png"] }
parking_lot = "0.11"
log = "0.4.14"
clap = "3.1.5"
once_cell = "1.10.0"
toml = "0.5.8"
rfd = { version = "0.8.1", optional = true }
flexi_logger = "0.22.3"
instant = {version = "0.1.12", features=["wasm-bindgen"] }
flume = { version = "0.10.12", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]

wasm-bindgen = "0.2.80"
console_error_panic_hook = "0.1.7"
wasm-logger = "0.2.0"
[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'Element',
#   'HtmlCanvasElement',
  'Window',
]

[patch.crates-io]
instant = { git = "https://github.com/Rodrigodd/instant.git" }

[profile.dev]
opt-level = 1


[profile.dev.package.audio-engine]
opt-level = 3

[profile.release]
debug = true

[profile.test]
opt-level = 3
# overflow-checks = false

[profile.fast]
debug = true
# strip = true
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.minsize]
debug = true
# strip = true
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
