[workspace]
members = ["core", "android", "native", "wasm", "libretro"]

[package]
name = "gameroy"
version = "0.2.0"
authors = ["Rodrigo Batista de Moraes <rodrigobatsmoraes@hotmail.com>"]
edition = "2021"
repository = "https://github.com/Rodrigodd/gameroy"
license = "MIT OR Apache-2.0"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "gameroy_lib"
crate_type = ["cdylib", "rlib"]
path = "src/lib.rs"

[features]

# Staticly include files in the binary
static = []

# Enable multithreading. Not support in wasm for example.
threads = []

default = ["rfd", "audio-engine", "threads"]

[dev-dependencies]
flexi_logger = "0.22.3"

[dependencies]

gameroy-core = { path = "core" }

# giui = { path = "../giui" }
giui = { git = "https://github.com/Rodrigodd/giui" }
# sprite-render = { path = "../sprite-render-rs", features=["opengl", "webgl"] }
sprite-render = { git = "https://github.com/Rodrigodd/sprite-render-rs", features = [
    "opengl",
    "webgl",
] }
# audio-engine = { path = "../audio-engine", optional = true }
audio-engine = { version = "0.4.2", optional = true }

rfd = { version = "0.9.1", optional = true, features = ["file-handle-inner"] }

serde = { version = "1", features = ["derive"] }
ron = "0.6"

winit = { version = "0.27.5", features = ["serde"] }
log = "0.4.14"

image = { version = "0.24.3", default-features = false, features = ["png"] }
parking_lot = "0.11"
once_cell = "1.10.0"
instant = { version = "0.1.12", features = ["wasm-bindgen"] }
flume = { version = "0.10.12", default-features = false }
cfg-if = "1.0.0"
toml = "0.5.9"
flate2 = "1.0.24"
ureq = { version = "2.6.2", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]

wasm-bindgen = "0.2.80"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
base64 = "0.13"
[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = ['Document', 'Element', 'Storage', 'Window', 'File', 'FileReader']

[target.'cfg(target_os = "android")'.dependencies]

ndk-glue = { version = "0.7", features = ["logger"] }
ndk-context = { version = "0.1.1" }
jni = "0.19.0"
urlencoding = "2.1"

[patch.crates-io]

# waiting for https://github.com/sebcrozet/instant/pull/46
instant = { git = "https://github.com/Rodrigodd/instant.git" }

# contains hacky workaround for https://github.com/rust-windowing/winit/issues/2299
# and this volume buttons fix: https://github.com/rust-windowing/winit/pull/1919
winit = { git = "https://github.com/Rodrigodd/winit.git", branch = "v0.27.5-gameroy" }

# fork contains a android backend
rfd = { git = "https://github.com/Rodrigodd/rfd.git", branch = "android", optional = true }

# hard code oboe's performance mode to low latency
cpal = { git = "https://github.com/Rodrigodd/cpal.git", branch = "oboe-low-latency" }

# contains this fix: https://github.com/Nercury/android_logger-rs/pull/62
android_logger = { git = "https://github.com/TiggeZaki/android_logger-rs", branch = "patch-1" }


[profile.dev]
opt-level = 1
[profile.dev.package.audio-engine]
opt-level = 3

# Make image decoding be about 10x faster.
[profile.dev.package.image]
opt-level = 3
[profile.dev.package.png]
opt-level = 3
[profile.dev.package.miniz_oxide]
opt-level = 3
[profile.dev.package.adler]
opt-level = 3
[profile.dev.package.flate2]
opt-level = 3

[profile.release]
debug = true

[profile.test]
opt-level = 3
# overflow-checks = false

[profile.fast]
inherits = "release"
debug = false
strip = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
