[package]
name = "gameroy_android"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "gameroy_android"
crate_type = ["cdylib", "rlib"]
path = "src/lib.rs"

[features]

static = ["gameroy/static"]
rfd = ["gameroy/rfd"]
audio-engine = ["gameroy/audio-engine"]
threads = ["gameroy/threads"]

default = ["threads", "audio-engine", "static", "rfd"]

[dependencies]
gameroy = { path = "..", default-features = false }
log = "0.4.14"
jni = "0.19.0"

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = { version = "0.6", features = ["logger"] }

[package.metadata.android.application]
theme = "@android:style/Theme.DeviceDefault.NoActionBar.Fullscreen"
label = "GameRoy"
