[package]
name = "gameroy-android"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "gameroy_android"
crate_type = ["cdylib", "rlib"]
path = "src/lib.rs"

[features]

static = ["gameroy/static"]
rfd = ["gameroy/rfd"]
audio-engine = ["gameroy/audio-engine"]
threads = ["gameroy/threads"]

default = ["threads", "audio-engine", "static", "rfd"]

[dependencies]
gameroy = { path = "..", default-features = false }
log = "0.4.14"
jni = "0.19.0"

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = { version = "0.7", features = ["logger"] }
