[package]
name = "gameroy-core"
version = "0.1.0"
authors = ["Rodrigo Batista de Moraes <rodrigobatsmoraes@hotmail.com>"]
repository = "https://github.com/Rodrigodd/gameroy"
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "gameroy"
path = "src/lib.rs"

[dependencies]

[dev-dependencies]
image = { version = "0.24", default-features = false, features = ["png"] }
rand = "0.8.4"
