[package]
name = "gameroy-core"
version = "0.2.0"
authors = ["Rodrigo Batista de Moraes <rodrigobatsmoraes@hotmail.com>"]
repository = "https://github.com/Rodrigodd/gameroy"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "gameroy"
path = "src/lib.rs"

[[bench]]
name = "bench_emulator"
harness = false

[dependencies]

[dev-dependencies]
image = { version = "0.24", default-features = false, features = ["png"] }
rand = "0.8.4"
criterion = "0.4"
rayon = "1.6.1"
