[package]
name = "gameroy-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "gameroy"
path = "src/lib.rs"

[[bench]]
name = "bench_emulator"
harness = false

[features]
io_trace = []
vcd_trace = ["dep:vcd"]

# default = ["vcd_trace"]

[dependencies]
vcd = { version = "0.7.0", optional = true }

[dev-dependencies]
image = { version = "0.25.4", default-features = false, features = ["png"] }
rand = "0.8.4"
criterion = "0.5.1"
rayon = "1.10.0"
text-diff = "0.4.0"
