[package]
name = "gameroy-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[features]
io_trace = ["gameroy-core/io_trace", "gameroy-jit/io_trace"]

[dependencies]
libfuzzer-sys = "0.4"
gameroy-core = { path = "../core" }
gameroy-jit = { path = "../jit" }

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "fuzz_jit"
path = "fuzz_targets/fuzz_jit.rs"
test = false
doc = false

[[bin]]
name = "fuzz_interpreter"
path = "fuzz_targets/fuzz_interpreter.rs"
test = false
doc = false
