[package]
name = "gameroy-jit"
version = "0.1.0"
edition = "2021"
authors = ["Rodrigo Batista de Moraes <rodrigobatsmoraes@hotmail.com>"]
repository = "https://github.com/Rodrigodd/gameroy"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
io_trace = ["gameroy-core/io_trace"]

[dependencies]
gameroy-core = { path = "../core" }

dynasmrt = "2.0.0"
cfg-if = "1.0.0"
memoffset = "0.8.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.45.0", features = [
    "Win32_System_Diagnostics_Debug",
    "Win32_Foundation",
] }

[dev-dependencies]
rayon = "1.6.1"
