[package]
name = "gameroy-jit"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
io_trace = ["gameroy-core/io_trace"]

statistics = []

[dependencies]
gameroy-core = { path = "../core" }

dynasmrt = "2.0.0"
cfg-if = "1.0.0"
memoffset = "0.8.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.45.0", features = [
    "Win32_System_Diagnostics_Debug",
    "Win32_Foundation",
] }

[dev-dependencies]
rayon = "1.6.1"
