[package]
name = "gameroy-libretro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
rust-libretro-sys = "0.1.5"
gameroy-core = { path = "../core", default-features = false }
log = "0.4.17"
