[package]
name = "gameroy-libretro"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
rust-libretro-sys = "0.1.5"
gameroy-core = { path = "../core", default-features = false }
log = "0.4.22"
