[package]
name = "native"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

# Enables console output.
# On windows, a application with console subsystem opens a terminal at startup, wich is undesirable
console = []

default = ["console"]

[dependencies]

gameroy = { path = ".." }
winit = "0.26.1"
flexi_logger = "0.22.3"
clap = "3.1.5"
log = "0.4"

[build-dependencies]
embed-resource = "1.7.1"
