[package]
name = "gameroy-native"
version = "0.2.0"
edition = "2021"
build = "build.rs"
authors = ["Rodrigo Batista de Moraes <rodrigobatsmoraes@hotmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Rodrigodd/gameroy"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

# Enables console output.
# On windows, a application with console subsystem opens a terminal at startup, wich is undesirable
console = []

static = ["gameroy/static"]
rfd = ["gameroy/rfd"]
audio-engine = ["gameroy/audio-engine"]
threads = ["gameroy/threads"]

default = ["threads", "console", "audio-engine", "rfd"]


[dependencies]

gameroy = { path = "..", default-features = false }
gameroy-jit = { path = "../jit" }
winit = "0.26.1"
flexi_logger = "0.22.3"
clap = "3.1.5"
log = "0.4"

[build-dependencies]
embed-resource = "1.7.1"
