[package]
name = "gameroy-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "gameroy_wasm"
crate_type = ["cdylib", "rlib"]
path = "src/lib.rs"

[features]

static = ["gameroy/static"]
rfd = ["gameroy/rfd"]
audio-engine = ["gameroy/audio-engine"]

default = ["audio-engine", "static", "rfd"]

[dependencies]
gameroy = { path = "..", default-features = false }
wasm-bindgen = "0.2.80"
console_error_panic_hook = "0.1.7"
wasm-logger = "0.2.0"
